[package]
name = "pachamama_blender"
version = "0.1.0"
authors = ["Leonard Siebeneicher <leonard7e@gmail.com>"]
edition = "2018"

[dependencies]
pyo3="0.11"

[dependencies.pachamama]
path = "./pachamama"

[lib]
name = "pachamama_blender"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]
